--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.426.0",
     "radix-ui": "^1.0.1",
